src/test/ui/issues/10000-19999/issue-17458.rs
static X: usize = unsafe { core::ptr::null::<usize>() as usize };
//~^ ERROR: casting pointers to integers in statics is unstable

fn main() {
    assert_eq!(X, 0);
}
